# basic-project-template

./: .gitignore  README.rst  cookiecutter.json  pyproject.toml  tox.ini
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.directory_name}}/: Makefile  make.bat  pyproject.toml  tox.ini
{{cookiecutter.directory_name}}/{{cookiecutter.sphinx_source_dir}}/: conf.py  index.rst
